Thu Mar 19 01:33:35 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (initialize_per_input): Set $output_all.
	(generate_makefile): Don't set $output_header or generate
	`default' target.  Print $output_all before $output_header.
	(handle_merge_targets): Put `all' target into $output_all.

Wed Mar 18 14:48:44 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_configure): Put secondary dependencies from
	multi-":" AC_OUTPUT entry into dependency list for file created by
	config.status, not file created by automake.  Test colon3.test.
	(generate_makefile): Pass $output, not $makefile, to
	handle_merge_targets.

	* Makefile.am (pkgdata_DATA): Added java.am, java-clean.am.
	* java-clean.am: New file.
	* java.am: New file.
	* automake.in (generate_makefile): Call handle_java.
	(handle_java): New sub.
	(am_install_var): Only push primary variable on @all if not doing
	Java.

Sun Mar  8 15:43:09 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_configure): When recognizing AC_OUTPUT ":"
	syntax, make regexp less greedy.  From Maciej W. Rozycki.  Test
	colon4.test.

Fri Mar  6 21:20:53 1998  Tom Tromey  <tromey@cygnus.com>

	* m4/exeext.m4 (AM_EXEEXT): Ignore am_c_test.o.  From Bruno
	Haible.

Tue Feb 24 12:10:44 1998  Tom Tromey  <tromey@cygnus.com>

	* Released 1.2f.

	* mans.am (install-man@SECTION@, uninstall-man@SECTION@): Quote
	`$' in sed expression.

	* config.guess, config.sub, texinfo.tex: New versions from FSF.

	* Makefile.am (pkgdata_DATA): Added mans.am.
	* automake.in (handle_man_pages): Rewrote for new man page
	handling.
	(initialize_global_constants): Removed install_man_format,
	uninstall_man_format.
	* mans.am: New file.

	* data.am, header.am, libs.am, lisp.am, ltlib.am, progs.am,
	scripts.am, texinfos.am: Put `@' before NORMAL_UNINSTALL
	invocation.

Mon Feb 23 13:38:56 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (get_object_extension): Remove .c.lo rule from
	libtool when dependencies turned on.