@@ -3961,6 +3961,13 @@ sub scan_one_configure_file
 	# used.
 	next if /AC_DEFUN/;
 
+	# Follow includes.  This is a weirdness commonly in use at
+	# Cygnus and hopefully nowhere else.
+	if (/sinclude\((.*)\)/ && -f $1)
+	{
+	    &scan_one_configure_file ($1);
+	}
+
 	# Populate libobjs array.
 	if (/AC_FUNC_ALLOCA/)
 	{
