@@ -1,3 +1,7 @@
+Thu Mar 19 14:11:45 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* sinclude.test: New file.
+
 Wed Mar 18 17:15:22 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* java.test: New file.
