@@ -1,5 +1,8 @@
 Thu Mar 19 01:33:35 1998  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (scan_one_configure_file): Check for `sinclude' and
+	turn into recursive call.
+
 	* automake.in (initialize_per_input): Set $output_all.
 	(generate_makefile): Don't set $output_header or generate
 	`default' target.  Print $output_all before $output_header.
